--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,5 +44,24 @@ header nav {
 
 .post .texts h2 {
   margin: 0;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
+}
+
+.post p.info {
+  margin: 6px 0;
+  color: #888;
+  font-size: .7rem;
+  font-weight: bold;
+  text-transform: capitalize;
+  display: flex;
+  gap: 10px;
+}
+
+.post p.info a.author {
+  color: #333;
+}
+
+.post p.summary {
+  margin: 10px 0;
+  line-height: 1.4rem;
 }
