--- a/client/src/App.css
+++ b/client/src/App.css
@@ -65,3 +65,18 @@ header nav {
   margin: 10px 0;
   line-height: 1.4rem;
 }
+
+form.login, form.register {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+input {
+  display: block;
+  margin-bottom: 5px;
+  width: 100%;
+  padding: 5px 7px;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  background-color: #fff;
+}
