--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: #222;
 }
@@ -79,4 +83,17 @@ input {
   border: 2px solid #ddd;
   border-radius: 5px;
   background-color: #fff;
+}
+
+button {
+  width: 100%;
+  background-color: #555;
+  border: 0;
+  color: #fff;
+  border-radius: 5px;
+  padding: 7px 0;
+}
+
+form h1 {
+  text-align: center;
 }
