Post display media query added

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,6 +46,12 @@ header nav {
   margin-bottom: 30px;
 }
 
+@media (max-width: 700px) {
+  .post {
+    grid-template-columns: 1fr;
+  }
+}
+
 .post .texts h2 {
   margin: 0;
   font-size: 1.8rem;
