--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,7 @@ img {
 
 main {
   padding: 10px;
-  max-width: 700px;
+  max-width: 960px;
   margin: 0 auto;
 }
 
@@ -41,14 +41,14 @@ header nav {
 
 .post {
   display: grid;
-  grid-template-columns: .9fr 1.1fr;
+  grid-template-columns: 1fr;
   gap: 20px;
   margin-bottom: 30px;
 }
 
-@media (max-width: 700px) {
+@media (min-width: 600px) {
   .post {
-    grid-template-columns: 1fr;
+    grid-template-columns: .9fr 1.1fr;
   }
 }
 
