--- a/client/src/App.css
+++ b/client/src/App.css
@@ -118,9 +118,44 @@ form.login h1, form.register h1 {
 .post-page .image img{
   object-fit: cover;
   object-position: center center;
+  width: 100%;
 }
 
 .post-page a {
   text-decoration: underline;
   color: #333;
+}
+
+.post-page .content blockquote {
+  font-style: italic;
+  color: #555;
+  margin: 0;
+  padding: 10px;
+  border-left: 5px solid #ddd;
+  background-color: #f5f5f5;
+}
+
+.post-page .actions {
+  display: inline-block;
+  /* justify-content: space-evenly; */
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.post-page .actions a {
+  text-decoration: none;
+  color: white;
+  /* background-color: #555; */
+  padding: 10px;
+}
+
+.post-page .actions a.edit {
+  margin-right: 10px;
+  background-color: #02d3f8;
+}
+
+.post-page .actions a.delete {
+  /* margin-right: 10px; */
+  background-color: #f80216;
 }
